# slam

./: .cproject  .gitignore  .project  Makefile  README.md  animate.gnuplot  animate.sh  pose_representation.lyx  report.bib  runsimulator.sh  simulator  simulator.cpp  simulator.hpp  simulator.sh
input/: example_webmap.waypoints.txt
input/Plaza1/: Plaza1_DRp.txt  Plaza1_GT.txt  Plaza1_TD.txt  Plaza1_TL.txt  controls.txt
input/Plaza2/: Plaza2_DRp.txt  Plaza2_GT.txt  Plaza2_TD.txt  Plaza2_TL.txt  controls.txt
input/example/: landmarks.txt  waypoints.txt
matlab/MCMC-SLAM/: Run1.m  Run2.m  Run3.m  Run4.m  Run5.m  Run51.fig  Run51.m  Run61.m  run5-1.sh
matlab/MCMC-SLAM/BaileyUtilities/: BaileyAssert.m
matlab/MCMC-SLAM/FastSlam/: configfile.m  getAllSLAMstates.asv  getAllSLAMstates.m  resample_particles.m
matlab/MCMC-SLAM/FastSlam/fastslam2/: fastslam2_sim.m
matlab/MCMC-SLAM/FastSlam/fastslam2r/: FastSLAM2_run1.m  FastSLAM2_run2.m  FastSLAM2_run3.m  fastslam2r_sim.asv  fastslam2r_sim.m  sample_proposal.m
matlab/MCMC-SLAM/FastSlam/fastslam2r/html/: fastslam2r_sim.html
matlab/MCMC-SLAM/MCMC_SLAM_v2/: DynamicalModel.asv  DynamicalModel.m  DynamicalStep.asv  FeatureStateLink.asv  FeatureStateLink.m  GraphLink.m  InferenceGraph.asv  InferenceGraph.m  InferenceGraphProposal.asv  InferenceGraphProposal.m  InferenceGraphProposal_debug.m  InferenceGraphRealization.asv  InferenceGraphRealization.m  MCMCSLAM_run1.m  MCMCSLAM_run2.m  MCMCSLAM_run3.m  MCMC_SLAM.m  MCMC_SLAM_v2.asv  MCMC_SLAM_v2.m  MCMC_build.m  MCMConInferenceGraph.asv  MCMConInferenceGraph.m  MCMCslam_sim.asv  MCMCslam_sim.m  MCMCslam_sim_v2.asv  MCMCslam_sim_v2.m  ObservationModel.asv  ObservationModel.m  SLAMgraph.asv  SLAMgraph.m  SLAMgraph_v2.asv  SLAMgraph_v2.m  SpanningTreeRealization.asv  SpanningTreeRealization.m  StateStateLink.asv  StateStateLink.m  Vector.asv  Vector.m  configfile.m  getAllSLAMstates.asv  (+13 more)
matlab/MCMC-SLAM/MCMC_SLAM_v2/figures/: landMarkL2Error.txt  logLikelihood.txt
matlab/MCMC-SLAM/RunXXX/: FastSLAM2_run2_p10000_1  FastSLAM2_run2_p10000_1a  FastSLAM2_run2_p10000_2  FastSLAM2_run2_p10000_2a  FastSLAM2_run2_p10000_3  FastSLAM2_run2_p10000_3a  FastSLAM2_run2_p10000_4  FastSLAM2_run2_p10000_4a  FastSLAM2_run2_p10000_5  MCMC-SLAM_run100_1  MCMC-SLAM_run150  MCMC-SLAM_run200
matlab/MCMC-SLAM/RunXXX/fromCluster/: FastSLAM2_run2_p10000_1  FastSLAM2_run2_p10000_2  FastSLAM2_run2_p10000_3  FastSLAM2_run2_p10000_4  FastSLAM2_run2_p10000_5  MCMC-SLAM_run100_1  MCMC-SLAM_run100_1a  MCMC-SLAM_run100_2  MCMC-SLAM_run100_2a  MCMC-SLAM_run100_3  MCMC-SLAM_run100_3a  MCMC-SLAM_run100_4  MCMC-SLAM_run100_4a  MCMC-SLAM_run100_5  MCMC-SLAM_run100_5a  stat.awk  stat.sh
matlab/MCMC-SLAM/Tools/: generateCircleMap.m  logSampling.m
nips_abstract/: abstract.bib  abstract.lyx  abstract.tex
planar_robot/: circle_controller.hpp  observation.hpp  odometry_model.hpp  pose.hpp  position.hpp  range_bearing_model.hpp  velocity_model.hpp  waypoint_controller.hpp
report/: graph1.tex  report.lyx
slam/: mcmc_slam.hpp  slam_data.hpp
src/: .clang-format  CMakeLists.txt  dataset.cpp  dataset.hpp  main.cpp  main.hpp  simulator.cpp  simulator.hpp
src/cmake/Modules/: FindG2O.cmake
src/planar_robot/: circle_controller.hpp  landmark_sensor.cpp  landmark_sensor.hpp  odometry_model.hpp  pose.hpp  position.hpp  range_bearing_model.cpp  range_bearing_model.hpp  rms_error.cpp  rms_error.hpp  velocity_model.cpp  velocity_model.hpp  waypoint_controller.cpp  waypoint_controller.hpp
src/simulator/: gnuplot.cpp  gnuplot.hpp  gnuplot_process.cpp  gnuplot_process.hpp  likelihood_plotter.hpp  simulator.cpp  simulator.hpp  slam_plotter.cpp  slam_plotter.hpp  time_series_plotter.cpp  time_series_plotter.hpp
src/slam/: average_slam_result.hpp  dataset_impl.hpp  fastslam.cpp  fastslam.hpp  fastslam_mcmc.cpp  fastslam_mcmc.hpp  g2o_clustering.cpp  g2o_clustering.hpp  g2o_slam.cpp  g2o_slam.hpp  hamiltonian.hpp  interfaces.hpp  mcmc_slam.cpp  mcmc_slam.hpp  multi_mcmc.cpp  multi_mcmc.hpp  particle_filter.hpp  path_integrator.hpp  slam_data.cpp  slam_data.hpp  slam_estimator.hpp  slam_initialiser.hpp  slam_likelihood.hpp  slam_result.hpp  slam_result_impl.hpp  slam_rmse.hpp  vector_model.hpp  vector_transforms.hpp
src/utilities/: bitree_algo.hpp  geometry.hpp
src/utility/: arraymap.hpp  bitree.hpp  bitree_algo.hpp  bitree_fwd.hpp  cholesky.hpp  container_fwd.hpp  cowmap.hpp  cowtree.cpp  cowtree.hpp  file.hpp  flat_map.hpp  geometry.hpp  listeners.hpp  map.hpp  multivariate.hpp  nnls.c  nnls.cpp  nnls.h  nnls.hpp  options.hpp  random.hpp  unscented.hpp  utility.cpp  utility.hpp  vector.hpp
test/: arraymap  arraymap.cpp  bitree  bitree.cpp  cholesky.cpp  qr.cpp  random_device.cpp  test_cumulative_sequence  test_cumulative_sequence.cpp  velocity_model.cpp
test/test_cumulative_sequence.dSYM/Contents/: Info.plist
test/test_cumulative_sequence.dSYM/Contents/Resources/DWARF/: test_cumulative_sequence
utilities/: arraymap.hpp  bitree.hpp  cumulative_sequence.hpp  geometry.hpp  normal_dist.hpp  random.hpp  random_source.hpp
